--- a/cafeservellocontroler/Views/Shared/_Layout.cshtml
+++ b/cafeservellocontroler/Views/Shared/_Layout.cshtml
@@ -34,9 +34,15 @@
 
     <header>
         <nav class="navbarr">
-            <div class="navbarr">
- 
-                <p >CAFÉ SERVELLO</p>
+            <div class="navbarr ">
+                
+                <div class="mt-4 mb-4 p-4 shadow-sm w-100">
+
+                    <p class="borda-titulo">
+                        <a href="/Home/Index" class="text-reset" s>CAFÉ SERVELLO</a>
+                        </p>
+                </div>
+                
 
             </div>
         </nav>
@@ -65,10 +71,10 @@
             @RenderBody()
         </main>
     </div>
-    
 
 
-
+   
+   
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
