--- a/cafeservellocontroler/Views/Venda/ApagarConfirmacao.cshtml
+++ b/cafeservellocontroler/Views/Venda/ApagarConfirmacao.cshtml
@@ -3,11 +3,33 @@
 @{
     ViewData["Title"] = "Confirmação de Apagar Venda";
 }
+<div class="div-Criar responsivo">
+    <div class="text-center">
+        <p class="btn-danger p-4">Aviso, o produto selecionado será excluído permanentemente!</p>
 
-<div class="text-center">
-    <h3>Realmente deseja apagar a Venda</h3>
+        <div class="div-conteudo">
+            <p class="display-6">
+                Realmente deseja apagar a Venda
+                <br />(@Model.Revendedores)
+            </p>
+        </div>
 
-    <a class="btn btn-primary btn-block" role="button" asp-controller="Venda" asp-action="Index">Cancelar Exclusão</a>
-    <a class="btn btn-danger btn-block" role="button" asp-controller="Venda" asp-route-id="@Model.Id" asp-action="Apagar">Confirmar Exclusão</a>
+        <br />
+        <div class="d-flex justify-content-between">
+            <a class="btn btn-outline-primary btnApagar btn-block" role="button" data-bs-dismiss="modal"
+               asp-controller="Venda" asp-action="Index">
+                <i class="fa-solid fa-arrow-left fa-lg"></i>
+                Cancelar Exclusão
+            </a>
+
+            <a role="button"
+               class="btn btn-outline-danger btnApagar"
+               asp-controller="Venda" asp-route-id="@Model.Id"
+               asp-action="Apagar">
+
+                <i class="fa-regular fa-trash-can fa-lg"></i>
+                Excluir
+            </a>
+        </div>
+    </div>
 </div>
-
