--- a/cafeservellocontroler/Views/Venda/Criar.cshtml
+++ b/cafeservellocontroler/Views/Venda/Criar.cshtml
@@ -2,12 +2,14 @@
 @using System.Globalization;
 @model VendaViewModel
 
-<form id="formVendas" asp-controller="Venda" asp-action="Criar" method="post">
 
+
+<form id="formVendas" asp-controller="Venda" asp-action="Criar" method="post">
+    <div class="div-Criar reponsivo">
     <div class="row mb-3">
         <div class="col-12">
-            <label class="form-label">Revendedor</label>
-            <select asp-for="RevendedorId" class="form-select" required>
+            <label class="">Revendedor</label>
+                <select asp-for="RevendedorId" class="form-select form-control" required>
                 <option value="">Selecione o revendedor</option>
                 @foreach (var r in Model.Revendedores)
                 {
@@ -28,10 +30,10 @@
             <div class="row item-row mb-3 border-bottom pb-3" data-index="@i">
 
                 <div class="col-6">
-                    <label class="form-label">Produto</label>
+                    <label class="">Produto</label>
 
                     <select asp-for="Itens[i].ProdutoId"
-                            class="form-select select-produto"
+                            class="form-select select-produto form-control"
                             onchange="atualizarValor(this)"
                             required>
 
@@ -54,7 +56,7 @@
                 </div>
 
                 <div class="col-3">
-                    <label class="form-label">Quantidade</label>
+                    <label class="">Quantidade</label>
                     <input type="number"
                            asp-for="Itens[i].Quantidade"
                            class="form-control input-quantidade"
@@ -86,11 +88,14 @@
                     </a>
                 </div>
 
+                
                 <div class="col-12 mt-2 text-end">
-                    <label class="form-label me-2">Total Item:</label>
-                    <span class="fw-bold fs-5 text-primary">
-                        R$ <span class="total-item-display">0.00</span>
-                    </span>
+                    <div>
+                        <label class="form-label me-2">Total Item:</label>
+                        <span class="fw-bold fs-5 text-primary">
+                            R$ <span class="total-item-display">0.00</span>
+                        </span>
+                        </div>
                 </div>
 
             </div>
@@ -103,8 +108,24 @@
 
     <h5 class="mt-3">Total da venda: R$ <span id="totalGeral" class="text-success fw-bold">0.00</span></h5>
 
-    <button type="submit" class="btn btn-primary w-100 mt-3">Finalizar Venda</button>
-    <button type="button" class="btn btn-danger w-100 mt-2" data-bs-dismiss="modal">Cancelar</button>
+    
+    </div>
+    <div class=" d-flex justify-content-end   ">
+
+        <button type="submit" class="btn btn-primary mt-3 button-submit-close " style="margin-right: 15px">
+            <i class="fa-regular fa-floppy-disk fa-lg"></i>
+            Adicionar
+
+
+        </button>
+
+        <a role="button" class="btn btn-outline-danger mt-3 button-submit-close" data-bs-dismiss="modal">
+            <i class="fa-solid fa-eject fa-lg"></i>
+            Cancelar
+        </a>
+    </div>
+
+
 </form>
 
 
@@ -229,7 +250,7 @@
                 <div class="col-6">
                     <label class="form-label">Produto</label>
                     <select name="Itens[${index}].ProdutoId"
-                            class="form-select select-produto"
+                            class="form-select select-produto form-control"
                             onchange="atualizarValor(this)"
                             required>
                         <option value="">Selecione o produto</option>
