--- a/cafeservellocontroler/wwwroot/css/modal.css
+++ b/cafeservellocontroler/wwwroot/css/modal.css
@@ -54,7 +54,13 @@ select.form-control {
     background: white;
     box-shadow: 1px 1px 2px rgba(0,0,0, 0.3);
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 2px;
+}
+.div-venda {
+    background: white;
+    box-shadow: 1px 1px 2px rgba(0,0,0, 0.1);
+    padding: 5px;
+    border-radius: 2px;
 }
 
 .div-conteudo {
