--- a/cafeservellocontroler/wwwroot/css/site.css
+++ b/cafeservellocontroler/wwwroot/css/site.css
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
-
+    margin-bottom: 60px;
+    overflow: hidden;
 }
 .close-alert{
     position: absolute;
