--- a/cafeservellocontroler/Views/Shared/_LayoutDeslogado.cshtml
+++ b/cafeservellocontroler/Views/Shared/_LayoutDeslogado.cshtml
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/sidebar.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/Search_PesquisaCss/Search.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/cafeservellocontroler.styles.css" asp-append-version="true" />
+
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
