--- a/cafeservellocontroler/Views/Shared/_Layout.cshtml
+++ b/cafeservellocontroler/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     
-    <script src="~/js/ValidacoesProduto/validacaoCrud.js"></script>
+    
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/Search_PesquisaJs/search.js"></script>
     
@@ -88,7 +88,7 @@
     
     
     @await RenderSectionAsync("Scripts", required: false)
-    
+    <script src="~/js/ValidacoesProduto/validacaoCrud.js" asp-append-version="true"></script>
     <script src="~/js/sidebar.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
