--- a/cafeservellocontroler/wwwroot/css/login.css
+++ b/cafeservellocontroler/wwwroot/css/login.css
@@ -1,11 +1,11 @@
 ﻿
 .tela-login {
     padding: 20px;
-    border-radius: 20px;
+    border-radius: 5px;
     background: white;
     width: 300px;
     max-height: 460px;
-    box-shadow: 4px 5px 0.9px gray;
+    box-shadow: 1px 1px 2px 0px gray;
     display: flex;
     flex-direction: column;
 }
