--- a/cafeservellocontroler/Views/Relatorio/LucroPorProdutoIndex.cshtml
+++ b/cafeservellocontroler/Views/Relatorio/LucroPorProdutoIndex.cshtml
@@ -1,5 +1,4 @@
 ﻿<form asp-action="LucroPorProduto" asp-controller="Relatorio" method="get" class="d-flex gap-3 align-items-end">
-
     <div>
         <label class="form-label">Data Inicial</label>
         <input type="date" name="dataInicial" class="form-control" />
@@ -10,8 +9,10 @@
         <input type="date" name="dataFinal" class="form-control" />
     </div>
 
-    <button type="submit" class="btn btn-success tamanho">
-        <i class="fa-solid fa-print"></i>Gerar Relatório PDF
-    </button>
-
+    <div class="d-flex justify-content-end flex-grow-1">
+        <button type="submit" class="btn btn-success tamanho-botao position-relative">
+            <i class="fa-solid fa-print" style="position:absolute; left:12px; top:50%; transform:translateY(-50%);"></i>
+            <span style="padding-left:28px;">Gerar Relatório PDF</span>
+        </button>
+    </div>
 </form>
