--- a/cafeservellocontroler/Views/Relatorio/ProdutoMaisVendidoIndex.cshtml
+++ b/cafeservellocontroler/Views/Relatorio/ProdutoMaisVendidoIndex.cshtml
@@ -1,19 +1,18 @@
 ﻿<form asp-action="ProdutoMaisVendido" asp-controller="Relatorio" method="get" class="d-flex gap-3 align-items-end">
-
-    <div class="col-md-4">
+    <div>
         <label class="form-label">Data Inicial</label>
         <input type="date" name="dataInicial" class="form-control" />
     </div>
 
-    <div class="col-md-4">
+    <div>
         <label class="form-label">Data Final</label>
         <input type="date" name="dataFinal" class="form-control" />
     </div>
 
-    <div class="col-md-4 d-flex align-items-end">
-        <button type="submit" class="btn btn-success w-100">
-            <i class="fa-solid fa-print"></i> Gerar Relatório PDF
+    <div class="d-flex justify-content-end flex-grow-1">
+        <button type="submit" class="btn btn-success tamanho-botao position-relative">
+            <i class="fa-solid fa-print" style="position:absolute; left:12px; top:50%; transform:translateY(-50%);"></i>
+            <span style="padding-left:28px;">Gerar Relatório PDF</span>
         </button>
     </div>
-
 </form>
